--- a/css/index.css
+++ b/css/index.css
@@ -1,196 +1,84 @@
-;/*
- * Globals
- */
-
-/* Links */
-a,
-a:focus,
-a:hover {
-  color: #fff;
-}
-
-/* Custom default button */
-.btn-default,
-.btn-default:hover,
-.btn-default:focus {
-  color: #333;
-  text-shadow: none; /* Prevent inheritence from `body` */
-  background-color: #fff;
-  border: 1px solid #fff;
-}
-
-
-/*
- * Base structure
- */
-
-html,
 body {
-	background: url('../assets/img/turkey.jpg') no-repeat center center fixed;
-	  -webkit-background-size: cover;
-	  -moz-background-size: cover;
-	  -o-background-size: cover;
-	  background-size: cover;
-	  height: 100%;
-	  background-color: #333;
-
-}
-body {
-
-  color: #fff;
-  text-align: center;
-  text-shadow: 0 1px 3px rgba(0,0,0,.5);
-}
-
-/* Extra markup and styles for table-esque vertical and horizontal centering */
-.site-wrapper {
-  display: table;
+  height: 100%;
   width: 100%;
-  height: 100%; /* For at least Firefox */
-  min-height: 100%;
-  -webkit-box-shadow: inset 0 0 100px rgba(0,0,0,.5);
-          box-shadow: inset 0 0 100px rgba(0,0,0,.5);
 }
-.site-wrapper-inner {
-  display: table-cell;
-  vertical-align: top;
-  padding-left:20px;
-}
-.cover-container {
-  margin-right: auto;
-  margin-left: auto;
-}
-
-/* Padding for spacing */
-.inner {
-  padding: 30px;
-}
-
-/* About */
-
-
-.sections{
-	text-align:right;
-}
-
-
-/*
- * Header
- */
-.masthead-brand {
-  margin-top: 10px;
-  margin-bottom: 10px;
-}
-
-.masthead-nav > li {
+/*.cover-container {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  /* bring your own prefixes */
+  transform: translate(-50%, -50%);
+}*/
+/*.contact-content{
+  position: absolute;
+  right:0;
+}*/
+/*.inner-content {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   display: inline-block;
+}*/
+.site-wrapper {
+  display: block;
 }
-.masthead-nav > li + li {
-  margin-left: 20px;
+.title {
+  /*text-align: center;*/
+  font-size: 50px;
+  margin-left: 50px;
+  margin-top: 50px;
 }
-.masthead-nav > li > a {
-  padding-right: 0;
-  padding-left: 0;
-  font-size: 16px;
-  font-weight: bold;
-  color: #fff; /* IE8 proofing */
-  color: rgba(255,255,255,.75);
-  border-bottom: 2px solid transparent;
+#wizard {
+  margin-top: 50px;
+  font-size: 50px;
+  color: rgb(142, 142, 142);
+  text-emphasis:4;
 }
-.masthead-nav > li > a:hover,
-.masthead-nav > li > a:focus {
-  background-color: transparent;
-  border-bottom-color: #a9a9a9;
-  border-bottom-color: rgba(255,255,255,.25);
+.links {
+  /*height: 200px;*/
+  margin-left: 50px;
+  margin-top: 75px;
+  padding: 0;
+  list-style-type: none;
+  /*text-align: center;*/
 }
-.masthead-nav > .active > a,
-.masthead-nav > .active > a:hover,
-.masthead-nav > .active > a:focus {
-  color: #fff;
-  border-bottom-color: #fff;
+.links li {
+  display: block;
+  list-style-type: none;
+  text-decoration: none;
+  padding: .2em 1em;
 }
-
-@media (min-width: 768px) {
-  .masthead-brand {
-    float: left;
+.contact {
+  margin-top: 50px;
+  display: block;
+  padding: 0;
+  text-align: center;
+}
+a {
+  color: black !important;
+  font-size: 20px;
   }
-  .masthead-nav {
-    float: right;
-  }
-}
-/*
- *Inner cover
- *
- */
-.inner-cover {
-	width:1080px
-}
-.inner-left {
-    text-align:center;
-	font-style:bold;
-	font-size:40px;
-
-}
-.inner-right {
-	padding-top:50px;
-	font-size:15px;
-    text-align:center
-}
-
-/*
- * Footer
- */
-
 .mastfoot {
-  color: #999; /* IE8 proofing */
-  color: rgba(255,255,255,.5);
-  margin-left: auto;
-  margin-right: auto;
-  text-align:center;
+  position: absolute;
+  text-align: center;
+  bottom: 0;
+  width: 100%;
+  height: 60px;
 }
 
-
-/*
- * Affix and center
- */
-
-@media (min-width: 768px) {
-  /* Pull out the header and footer */
-  .masthead {
-    position: fixed;
-    top: 0;
+@media(min-width:768px) {
+  .title {
+    text-align: left;
+    margin-top: 100px;
+    font-size: 75px;
   }
-  .mastfoot {
-    position: fixed;
-    bottom: 0;
+  #wizard {
+  margin-top: 100px;
+  font-size: 80px;
   }
-  /* Start the vertical centering */
-  .site-wrapper-inner {
-    vertical-align: middle;
+  .links li{
+    display: inline-block;
+    margin-top: 100px;
   }
-  /* Handle the widths */
-  .masthead,
-  .mastfoot,
-  .cover-container {
-    width: 100%; /* Must be percentage or pixels for horizontal alignment */
-  }
-  .inner-left {
-	  text-align:left;
-      float:left;
-  }
-  .inner-right {
-	  float:right;
-      text-align:right
-  }
-
-}
-
-@media (min-width: 1080px) {
-  .masthead,
-  .cover-container,
-  .portfolio
-  .mastfoot{
-    width: 1080px;
-  }
-
 }
