--- a/css/index.css
+++ b/css/index.css
@@ -20,15 +20,20 @@ body {
   transform: translate(-50%, -50%);
   display: inline-block;
 }*/
+.namebreak {
+  display: block;
+}
 .site-wrapper {
   display: block;
 }
 .title {
   /*text-align: center;*/
+  white-space: normal !important;
   font-size: 50px;
   margin-left: 50px;
   margin-top: 50px;
 }
+
 #wizard {
   margin-top: 50px;
   font-size: 50px;
@@ -68,6 +73,9 @@ a {
 }
 
 @media(min-width:768px) {
+  .namebreak {
+    display: none;
+  }
   .title {
     text-align: left;
     margin-top: 100px;
