--- a/css/index.css
+++ b/css/index.css
@@ -51,8 +51,11 @@ body {
 .links li {
   display: block;
   list-style-type: none;
-  text-decoration: none;
+  text-decoration: underline;
   padding: .2em 1em;
+}
+.links li:hover {
+  text-decoration: none;
 }
 .contact {
   margin-top: 50px;
