--- a/css/index.css
+++ b/css/index.css
@@ -42,8 +42,9 @@ body {
 }
 .links {
   /*height: 200px;*/
+  text-align: center;
   margin-left: 50px;
-  margin-top: 75px;
+  margin-top: 25px;
   padding: 0;
   list-style-type: none;
   /*text-align: center;*/
@@ -68,14 +69,15 @@ a {
   font-size: 20px;
   }
 .mastfoot {
-  position: absolute;
+  position: relative;
   text-align: center;
+  /*margin-top: 20px*/
   bottom: 0;
   width: 100%;
   height: 60px;
 }
 
-@media(min-width:768px) {
+@media(min-width:480px) {
   .namebreak {
     display: none;
   }
@@ -88,8 +90,15 @@ a {
   margin-top: 100px;
   font-size: 80px;
   }
+  .links {
+    text-align: left;
+  }
   .links li{
     display: inline-block;
     margin-top: 100px;
+  }
+  .mastfoot {
+    margin-top: 100px;
+    position: absolute;
   }
 }
