--- a/css/index.css
+++ b/css/index.css
@@ -25,55 +25,70 @@ body {
     display: flex;
 }
 .site-wrapper {
-  /*display: block;*/
-    display: flex;
-    flex-direction:column;
+  display: flex;
+    -webkit-box-orient: horizontal;
+    -moz-box-orient: horizontal;
+    box-orient: horizontal;
+    flex-direction: column;
+
+    -webkit-box-pack: center;
+    -moz-box-pack: center;
+    box-pack: center;
+    justify-content: center;
+
+    -webkit-box-align: center;
+    -moz-box-align: center;
+    box-align: center;
+    align-items: center;
 }
-.left {
+/*.left {
   display: flex;
   flex-direction: column;
-}
+}*/
 .title {
   /*text-align: center;*/
   white-space: normal !important;
   font-size: 50px;
-  margin-left: 50px;
-  margin-top: 50px;
+  /*margin-left: 50px;*/
+  /*margin-top: 50px;*/
+
+  text-align: center;
 }
 
 .logo {
-
-  margin-left: 50px;
-  margin-top: 50px;
+  /*max-width: 75%;
+      height: auto;*/
+  /*margin-left: 50px;
+  margin-top: 50px;*/
+  /*height: 100px;
+  width: 125px;*/
+  max-width:100%;
+  height:100%;
+  -webkit-box-flex: 1;
+    -moz-box-flex: 1;
+    box-flex: 1;
+    -webkit-flex: 1 1 auto;
+    flex: 1 1 auto;
 }
 
-#wizard {
-  margin-top: 50px;
-  font-size: 50px;
-  color: rgb(142, 142, 142);
-  text-emphasis:4;
-}
 .links {
   /*height: 200px;*/
-  margin-left: 20px;
-  margin-top: 25px;
-  padding: 0;
   list-style-type: none;
   /*text-align: center;*/
 }
 .links li {
-  display: block;
+  /*display: block;*/
   list-style-type: none;
   text-decoration: underline;
   padding: .2em 1em;
 }
 .links li:hover {
   text-decoration: none;
+  font-size: 20px;
 }
 .contact {
-  margin-top: 50px;
-  display: block;
-  padding: 0;
+  /*margin-top: 50px;*/
+  /*display: block;*/
   text-align: center;
 }
 a {
@@ -81,7 +96,6 @@ a {
   font-size: 20px;
   }
 .mastfoot {
-  position: relative;
   text-align: center;
   /*margin-top: 20px*/
   bottom: 0;
@@ -89,33 +103,38 @@ a {
   height: 60px;
 }
 
-@media(min-width:480px) {
+@media(min-width:751px) {
   .namebreak {
     display: none;
   }
-  .title {
-    text-align: left;
-    margin-top: 100px;
-    font-size: 75px;
+  .logo {
+    display: flex;
+    /*margin-left: 50px;
+    margin-top: 50px;*/
+    /*height: 400px;
+    width: 500px;*/
+    max-width: 100%;
+    height: auto;
+    justify-content: center;
   }
-  #wizard {
-  margin-top: 100px;
-  font-size: 80px;
+  .title {
+    /*text-align: left;*/
+    font-size: 75px;
   }
   .site-wrapper {
     /*display: block;*/
-      display: flex;
-      flex-direction:row;
+      /*display: flex;
+      justify-content: center;*/
+      flex-direction:column;
   }
   .links {
-    text-align: left;
+    /*text-align: left;*/
   }
   .links li{
     display: inline-block;
-    margin-top: 100px;
+    /*margin-top: 100px;*/
   }
   .mastfoot {
-    margin-top: 100px;
     position: absolute;
   }
 }
