--- a/css/index.css
+++ b/css/index.css
@@ -25,21 +25,11 @@ body {
     display: flex;
 }
 .site-wrapper {
-  display: flex;
-    -webkit-box-orient: horizontal;
-    -moz-box-orient: horizontal;
-    box-orient: horizontal;
-    flex-direction: column;
+  /*display: block;*/
+    display: flex;
+    flex-direction:column;
 
-    -webkit-box-pack: center;
-    -moz-box-pack: center;
-    box-pack: center;
-    justify-content: center;
-
-    -webkit-box-align: center;
-    -moz-box-align: center;
-    box-align: center;
-    align-items: center;
+  text-align: center;
 }
 /*.left {
   display: flex;
@@ -56,19 +46,12 @@ body {
 }
 
 .logo {
-  /*max-width: 75%;
+  max-width: 75%;
       height: auto;*/
   /*margin-left: 50px;
   margin-top: 50px;*/
   /*height: 100px;
   width: 125px;*/
-  max-width:100%;
-  height:100%;
-  -webkit-box-flex: 1;
-    -moz-box-flex: 1;
-    box-flex: 1;
-    -webkit-flex: 1 1 auto;
-    flex: 1 1 auto;
 }
 
 .links {
@@ -77,7 +60,7 @@ body {
   /*text-align: center;*/
 }
 .links li {
-  /*display: block;*/
+  display: block;
   list-style-type: none;
   text-decoration: underline;
   padding: .2em 1em;
@@ -88,7 +71,7 @@ body {
 }
 .contact {
   /*margin-top: 50px;*/
-  /*display: block;*/
+  display: block;
   text-align: center;
 }
 a {
@@ -123,8 +106,8 @@ a {
   }
   .site-wrapper {
     /*display: block;*/
-      /*display: flex;
-      justify-content: center;*/
+      display: flex;
+      justify-content: center;
       flex-direction:column;
   }
   .links {
