--- a/css/index.css
+++ b/css/index.css
@@ -11,7 +11,7 @@ body {
   text-align: center;
 }
 .title {
-  white-space: normal !important;
+  /*white-space: normal;*/
   font-size: 50px;
   text-align: center;
 }
@@ -27,7 +27,7 @@ body {
 .links li {
   display: block;
   list-style-type: none;
-  padding: .2em 1em;
+  /*padding: .2em 1em;*/
 }
 .links li:hover {
   background-color: red;
@@ -44,40 +44,22 @@ a {
   color: black;
   font-size: 30px;
   }
-.mastfoot {
-  text-align: center;
-  /*margin-top: 20px*/
-  bottom: 0;
-  width: 100%;
-  height: 60px;
-}
+
 
 @media(min-width:751px) {
   .namebreak {
     display: none;
   }
-  /*.logo {
-    display: flex;*/
-    /*margin-left: 50px;
-    margin-top: 50px;*/
-    /*height: 400px;
-    width: 500px;*/
-      /*width: 50%;
-    height: auto;
-    justify-content: center;
-  }
-  .logo-image {
-    height: auto;
-  }*/
+
   .title {
     /*text-align: left;*/
     font-size: 75px;
   }
   .site-wrapper {
     /*display: block;*/
-      display: flex;
-      justify-content: center;
-      flex-direction:column;
+    display: flex;
+    justify-content: center;
+    flex-direction:column;
   }
   .links {
     /*text-align: left;*/
@@ -86,7 +68,5 @@ a {
     display: inline-block;
     /*margin-top: 100px;*/
   }
-  .mastfoot {
-    position: absolute;
-  }
+
 }
