--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,5 @@
 body {
-  height: 100%;
+  max-height: 100%;
   max-width: 100%;
   overflow-x:hidden;
 }
@@ -12,6 +12,7 @@ body {
   text-align: center;
 }
 .title {
+  margin: 0;
   font-size: 50px;
   text-align: center;
 }
